--- a/Views/Accounts/Login.cshtml
+++ b/Views/Accounts/Login.cshtml
@@ -18,7 +18,7 @@
         <button type="submit">Login</button>
         <br />
         <p>
-            Don't have an account?
+            Do you lack an account?
             <a href="Accounts/Register">Register</a>
         </p>
         @if(ViewData["ValidateMessage"] != null)
