--- a/Views/Accounts/Register.cshtml
+++ b/Views/Accounts/Register.cshtml
@@ -18,7 +18,7 @@
         <button type="submit">Register</button>
         <br />
         <p>
-            Are you already a user?
+            Do you already have an account?
             <a href="Accounts/Login">Login</a>
         </p>
 
