--- a/Views/Modules/Create.cshtml
+++ b/Views/Modules/Create.cshtml
@@ -13,32 +13,32 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="moduleCode" class="control-label">Module Code</label>
+                <label asp-for="moduleCode" class="control-label">The Module Code</label>
                 <input asp-for="moduleCode" class="form-control" />
                 <span asp-validation-for="moduleCode" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="moduleName" class="control-label">Module Name</label>
+                <label asp-for="moduleName" class="control-label">The Module Name</label>
                 <input asp-for="moduleName" class="form-control" />
                 <span asp-validation-for="moduleName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="credits" class="control-label">Module Credits</label>
+                <label asp-for="credits" class="control-label">The Module Credits</label>
                 <input asp-for="credits" class="form-control" />
                 <span asp-validation-for="credits" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="classHoursPerWeek" class="control-label">Class Hours Per Week</label>
+                <label asp-for="classHoursPerWeek" class="control-label">Amount of class Hours Per Week</label>
                 <input asp-for="classHoursPerWeek" class="form-control" />
                 <span asp-validation-for="classHoursPerWeek" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="semesterNumOfWeeks" class="control-label">Number Of Weeks in the Semester</label>
+                <label asp-for="semesterNumOfWeeks" class="control-label">Amount Of Weeks in Semester</label>
                 <input asp-for="semesterNumOfWeeks" class="form-control" />
                 <span asp-validation-for="semesterNumOfWeeks" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="semesterStartDate" class="control-label">When does the Semester Start</label>
+                <label asp-for="semesterStartDate" class="control-label">When does the academic term commence?</label>
                 <input asp-for="semesterStartDate" class="form-control" />
                 <span asp-validation-for="semesterStartDate" class="text-danger"></span>
             </div>
