--- a/Views/Modules/AddStudyTime.cshtml
+++ b/Views/Modules/AddStudyTime.cshtml
@@ -6,7 +6,7 @@
 <h1>Add Time Studied</h1>
 <hr />
 <h3>
-    You have studied @ViewData["ModuleHoursThisWeek"] hours so far this week out of the @ViewData["ModuleRecommendedHours"] recommended hours.
+    You've devoted @ViewData["ModuleHoursThisWeek"] hours to studying this week, which is a portion of the recommended @ViewData["ModuleRecommendedHours"] hours.
 </h3>
 <hr />
 <div class="row">
@@ -14,9 +14,9 @@
         <form asp-controller="Modules" asp-action="AddStudyTime" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="hoursStudied" class="control-label">How many hours did you study?</label>
-                <input asp-for="hoursStudied" class="form-control" />
-                <span asp-validation-for="hoursStudied" class="text-danger"></span>
+                <label asp-for="StudiedHours" class="control-label">How many hours did you study?</label>
+                <input asp-for="StudiedHours" class="form-control" />
+                <span asp-validation-for="StudiedHours" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
