--- a/Views/Modules/Delete.cshtml
+++ b/Views/Modules/Delete.cshtml
@@ -6,7 +6,7 @@
 
 <h1>Delete @Model.moduleCode</h1>
 
-<h3>Are you sure you want to delete @Model.moduleCode? This action cannot be undone.</h3>
+<h3>Are you certain you wish to remove the entry with the module code @Model.moduleCode? This action is irreversible.</h3>
 <div>
     <hr />
     <form asp-action="Delete">
