Added READMe and screenshots,

--- a/Views/Modules/Details.cshtml
+++ b/Views/Modules/Details.cshtml
@@ -27,7 +27,7 @@
             The Amount of Class Hours Per Week
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.classHoursPerWeek)
+            @Html.DisplayFor(model => model.WeeklyClassHours)
         </dd>
         <dt class = "col-sm-2">
             The Number of Hours Studied This Week
@@ -45,13 +45,13 @@
             The Number of Weeks in the Semester
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.semesterNumOfWeeks)
+            @Html.DisplayFor(model => model.SemesterWeeks)
         </dd>
         <dt class = "col-sm-2">
             Date when Semester will start
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.semesterStartDate)
+            @Html.DisplayFor(model => model.SemesterStart)
         </dd>
     </dl>
 </div>
