--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -38,7 +38,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2022 - Study Tracker
+            &copy; 2023 - Kaitlyns Study Tracker
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
