--- a/Views/Modules/Create.cshtml
+++ b/Views/Modules/Create.cshtml
@@ -28,19 +28,19 @@
                 <span asp-validation-for="credits" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="classHoursPerWeek" class="control-label">Amount of class Hours Per Week</label>
-                <input asp-for="classHoursPerWeek" class="form-control" />
-                <span asp-validation-for="classHoursPerWeek" class="text-danger"></span>
+                <label asp-for="WeeklyClassHours" class="control-label">Amount of class Hours Per Week</label>
+                <input asp-for="WeeklyClassHours" class="form-control" />
+                <span asp-validation-for="WeeklyClassHours" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="semesterNumOfWeeks" class="control-label">Amount Of Weeks in Semester</label>
-                <input asp-for="semesterNumOfWeeks" class="form-control" />
-                <span asp-validation-for="semesterNumOfWeeks" class="text-danger"></span>
+                <label asp-for="SemesterWeeks" class="control-label">Amount Of Weeks in Semester</label>
+                <input asp-for="SemesterWeeks" class="form-control" />
+                <span asp-validation-for="SemesterWeeks" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="semesterStartDate" class="control-label">When does the academic term commence?</label>
-                <input asp-for="semesterStartDate" class="form-control" />
-                <span asp-validation-for="semesterStartDate" class="text-danger"></span>
+                <label asp-for="SemesterStart" class="control-label">When does the academic term commence?</label>
+                <input asp-for="SemesterStart" class="form-control" />
+                <span asp-validation-for="SemesterStart" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
