--- a/Views/Modules/Edit.cshtml
+++ b/Views/Modules/Edit.cshtml
@@ -23,19 +23,19 @@
                 <span asp-validation-for="credits" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="classHoursPerWeek" class="control-label">Class Hours Per Week</label>
-                <input asp-for="classHoursPerWeek" class="form-control" />
-                <span asp-validation-for="classHoursPerWeek" class="text-danger"></span>
+                <label asp-for="WeeklyClassHours" class="control-label">Class Hours Per Week</label>
+                <input asp-for="WeeklyClassHours" class="form-control" />
+                <span asp-validation-for="WeeklyClassHours" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="semesterNumOfWeeks" class="control-label">Number Of Weeks In the Semester</label>
-                <input asp-for="semesterNumOfWeeks" class="form-control" />
-                <span asp-validation-for="semesterNumOfWeeks" class="text-danger"></span>
+                <label asp-for="SemesterWeeks" class="control-label">Number Of Weeks In the Semester</label>
+                <input asp-for="SemesterWeeks" class="form-control" />
+                <span asp-validation-for="SemesterWeeks" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="semesterStartDate" class="control-label">Semester Start Date</label>
-                <input asp-for="semesterStartDate" class="form-control" />
-                <span asp-validation-for="semesterStartDate" class="text-danger"></span>
+                <label asp-for="SemesterStart" class="control-label">Semester Start Date</label>
+                <input asp-for="SemesterStart" class="form-control" />
+                <span asp-validation-for="SemesterStart" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
